Particles with multires crash #62271

Closed
opened 2019-03-06 17:50:05 +01:00 by Julien Kaspar · 5 comments
Member

Blender Version
Broken: b94ec178a206

Short description of error
When using a particle system on an object with a multiresolution modifer, Blender will crash when attempting a stroke in sculpt mode.

**Blender Version** Broken: b94ec178a206 **Short description of error** When using a particle system on an object with a multiresolution modifer, Blender will crash when attempting a stroke in sculpt mode.
Author
Member

Added subscribers: @JulienKaspar, @Sergey

Added subscribers: @JulienKaspar, @Sergey

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Sergey Sharybin was assigned by Sebastian Parborg 2019-03-06 17:53:31 +01:00

Backtrace:

Thread 25 "blender" received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0x7fffd57fe700 (LWP 20388)]
0x0000555558323336 in subdiv_ccg_recalc_modified_inner_normal_task (userdata_v=0x7fffffffd0d0, face_index=10, tls_v=0x7fffd57fdb60)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/subdiv_ccg.c:908
908		const int num_face_grids = face->num_grids;
(gdb) bt
#0  0x0000555558323336 in subdiv_ccg_recalc_modified_inner_normal_task (userdata_v=0x7fffffffd0d0, face_index=10, tls_v=0x7fffd57fdb60)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/subdiv_ccg.c:908
#1  0x00005555586921a9 in parallel_range_func (pool=0x7fffcbf64008, userdata_chunk=0x7fffffffcfb0, thread_id=2)
    at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/task.c:1038
#2  0x000055555868f8d5 in task_scheduler_thread_run (thread_p=0x7fffd89f2068)
    at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/task.c:439
- 3  0x00007ffff63993c3 in start_thread () from /lib64/libpthread.so.0
- 4  0x00007ffff134e3ef in clone () from /lib64/libc.so.6
Backtrace: ``` Thread 25 "blender" received signal SIGSEGV, Segmentation fault. [Switching to Thread 0x7fffd57fe700 (LWP 20388)] 0x0000555558323336 in subdiv_ccg_recalc_modified_inner_normal_task (userdata_v=0x7fffffffd0d0, face_index=10, tls_v=0x7fffd57fdb60) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/subdiv_ccg.c:908 908 const int num_face_grids = face->num_grids; (gdb) bt #0 0x0000555558323336 in subdiv_ccg_recalc_modified_inner_normal_task (userdata_v=0x7fffffffd0d0, face_index=10, tls_v=0x7fffd57fdb60) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/subdiv_ccg.c:908 #1 0x00005555586921a9 in parallel_range_func (pool=0x7fffcbf64008, userdata_chunk=0x7fffffffcfb0, thread_id=2) at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/task.c:1038 #2 0x000055555868f8d5 in task_scheduler_thread_run (thread_p=0x7fffd89f2068) at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/task.c:439 - 3 0x00007ffff63993c3 in start_thread () from /lib64/libpthread.so.0 - 4 0x00007ffff134e3ef in clone () from /lib64/libc.so.6 ```

This issue was referenced by blender/blender@967d82d9b9

This issue was referenced by blender/blender@967d82d9b9489aa9f08270a4fafc8415158690ea

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: studio/blender-studio#62271
No description provided.